--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ button.add {
     transform: translate(-50%,-50%);
     color: white;
     height: fit-content;
-    width: 500px;
+    width:80vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
